# labrom-ros-studies

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/pkgconfig/: simpleps.pc
devel/lib/python3/dist-packages/simpleps/: __init__.py
devel/lib/simpleps/: chatter  listener
devel/share/roseus/ros/simpleps/: manifest.l
devel/share/simpleps/cmake/: simpleps-msg-extras.cmake  simpleps-msg-paths.cmake  simplepsConfig-version.cmake  simplepsConfig.cmake
src/my_smb_control/: CMakeLists.txt
src/my_smb_control/launch/: my_walker.launch
src/my_smb_control/src/: my_walker.cpp
src/python_wrapper/: CMakeLists.txt  README.md
src/python_wrapper/src/: Wrapper.py  flask_server.py  mocked_sensor_publisher.py  simple_publisher.py  template.py  test.py
src/simpleps/: CMakeLists.txt  package.xml
src/simpleps/src/: publisher.cpp  subscriber.cpp
src/simpleps/src/services/: client.cpp  server.cpp
src/smb_highlevel_controller/: CMakeLists.txt  package.xml
src/smb_highlevel_controller/config/: smb_config.yaml
src/smb_highlevel_controller/include/smb_highlevel_controller/: LaserScan.hpp
src/smb_highlevel_controller/launch/: ekf.launch  laser_scan.launch  laser_wrapper.launch
src/smb_highlevel_controller/src/: LaserScan.cpp  scan_listener.cpp  scan_listener_with_wrapper.cpp
